[gd_scene load_steps=6 format=3 uid="uid://dfmk347awgj26"]

[ext_resource type="PackedScene" uid="uid://dcyr3squov0x6" path="res://Scenes/MainScreen.tscn" id="1_aby4p"]
[ext_resource type="Script" path="res://Scripts/DebugInfo.gd" id="1_ic1h4"]
[ext_resource type="PackedScene" uid="uid://d1ut3ffjh0ifc" path="res://Scenes/InputSender.tscn" id="1_qptta"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cu5rj"]
bg_color = Color(1, 1, 1, 1)
corner_detail = 10

[sub_resource type="Theme" id="Theme_st2kh"]
/styles/Test = SubResource("StyleBoxFlat_cu5rj")

[node name="Node2D" type="Node2D"]

[node name="MainScreen" parent="." instance=ExtResource("1_aby4p")]
offset_left = 37.0
offset_top = 37.0
offset_right = 37.0
offset_bottom = 37.0

[node name="DebugInfo" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = 5.0
offset_right = 6.0
offset_bottom = 5.0
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_ic1h4")
metadata/_edit_use_anchors_ = true

[node name="InputSender" parent="DebugInfo" instance=ExtResource("1_qptta")]

[node name="WalkLabel" type="Label" parent="DebugInfo"]
layout_mode = 1
anchors_preset = -1
offset_right = 61.0
offset_bottom = 26.0
text = "Throtle:"
metadata/_edit_use_anchors_ = true

[node name="SteeringLabel" type="Label" parent="DebugInfo"]
layout_mode = 0
offset_top = 22.0
offset_right = 64.0
offset_bottom = 48.0
text = "Steering"
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" type="ProgressBar" parent="DebugInfo"]
layout_mode = 0
offset_left = 98.0
offset_top = 12.0
offset_right = 209.0
offset_bottom = 39.0
theme = SubResource("Theme_st2kh")
max_value = 255.0
step = 0.1
value = 50.0
metadata/_edit_use_anchors_ = true
